--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Nick Strayer's Resume"
-author: Nick Strayer
+title: Claudia Hebert's Resume"
+author: Claudia Hebert
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
   echo = FALSE
 )
 library(tidyverse)
+library(dplyr)
 library(glue)
 
 # Set this to true to have links turned into footnotes at the end of the document
@@ -35,7 +36,7 @@ position_data <- read_csv('positions.csv') %>%
     # Build some custom sections by collapsing others
     section = case_when(
       section %in% c('research_positions', 'industry_positions') ~ 'positions', 
-      section %in% c('data_science_writings', 'by_me_press') ~ 'writings',
+      section %in% c('data_science_writings', 'by_me_press', 'conferences_publications') ~ 'writings',
       TRUE ~ section
     )
   ) 
@@ -47,18 +48,17 @@ Aside
 ================================================================================
 
 
-![logo](beta_dist.png){width=100%}
+![logo](https://media.geeksforgeeks.org/wp-content/uploads/20240701132936/Research.webp){width=100%}
 
 Contact {#contact}
 --------------------------------------------------------------------------------
 
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+- <i class="fa fa-envelope"></i> chebert6@asu.edu
+- <i class="fa fa-github"></i> https://github.com/ClaudiaHebert
+- <i class="fa fa-link"></i> [https://github.com/ClaudiaHebert/PAF-514-CV](https://github.com/ClaudiaHebert/PAF-514-CV)
+- <i class="fa fa-phone"></i> (XXX) XXX-XXXX
 
 
 
@@ -69,13 +69,10 @@ Language Skills {#skills}
 ```{r}
 skills <- tribble(
   ~skill,               ~level,
-  "R",                  5,
-  "Javascript (d3.js)", 4.5,
-  "Python",             4,
-  "Bash",               3.5,
-  "SQL",                3,
-  "C++",                3,
-  "AWK",                3
+  "Excel",              4,
+  "R",                  3,
+  "SPSS",               3,
+  "HTML",               1
 )
 build_skill_bars(skills)
 ```
@@ -85,26 +82,24 @@ build_skill_bars(skills)
 Open Source Contributions {#open-source}
 --------------------------------------------------------------------------------
 
-All projects available at `github.com/nstrayer/<name>`
+All projects available at `github.com/ClaudiaHebert/<name>`
 
 
-- `shinysense`: R package to use sensor data in Shiny apps
-- `tuftesque`: Hugo theme (behind LiveFreeOrDichotomize.com)
-- `slid3r`: D3 add-on for fully svg slider inputs
+- `montyhall`: R package to build a monty hall simulation 
 
 
 More info {#more-info}
 --------------------------------------------------------------------------------
 
-See full CV at nickstrayer.me/cv for more complete list of positions and publications.
+See full CV at https://github.com/ClaudiaHebert/PAF-514-CVfor more complete list of positions and publications.
 
 
-Disclaimer {#disclaimer}
+Disclaimer {This resume is designed for a class project. It may not be up to date, entirely accurate, or contain the entirety of my professional career.}
 --------------------------------------------------------------------------------
 
 Made w/ [**pagedown**](https://github.com/rstudio/pagedown). 
 
-Source code: [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+Source code: [https://github.com/ClaudiaHebert/PAF-514-CV](https://github.com/ClaudiaHebert/PAF-514-CV).
 
 Last updated on `r Sys.Date()`.
 
@@ -114,13 +109,13 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Claudia Hebert {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
+intro_text <- "I am a Masters student at Arizona State University in the the Program Evaluation and Data Analytics program.
 
-Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
+Currently working in education research to develop creative assessments and move the field toward equitable, asset-based, formative assessments of important cognitive and social-emotional skills. 
 "
 
 
